--- a/extractor/Cargo.toml
+++ b/extractor/Cargo.toml
@@ -13,3 +13,4 @@ macros = { path = "../macros" }
 nats = "0.8.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+chrono = "0.4.9"
