--- a/extractor/Cargo.toml
+++ b/extractor/Cargo.toml
@@ -9,8 +9,8 @@ reqwest = "0.10.8"
 scraper = "0.12.0"
 async-trait = "0.1.41"
 tokio = { version = "0.2.21", features = ["macros"] }
-macros = { path = "../macros" }
 nats = "0.8.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4.9"
+futures = "0.3"
