--- a/normalizer/Cargo.toml
+++ b/normalizer/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "0.2.21", features = ["macros"] }
+nats = "0.8.0"
+serde = { version = "1.0", features = ["derive"] }
