--- a/extractor/Cargo.toml
+++ b/extractor/Cargo.toml
@@ -12,6 +12,6 @@ tokio = { version = "0.2.21", features = ["macros"] }
 nats = "0.8.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-chrono = "0.4.9"
+chrono = { version = "0.4.9", features = ["serde"]}
 futures = "0.3"
 tokio-test = "0.2.1"
