--- a/normalizer/Cargo.toml
+++ b/normalizer/Cargo.toml
@@ -11,7 +11,8 @@ nats = "0.8.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 schemafy_core = "0.5.1"
-macros = { path = "../macros" }
+schema = { path = "../schema" }
+common = { path = "../common" }
 bolt-client = { version = "0.8.0", features = ["tokio-stream"]}
 bolt-proto = "0.9.1"
 tokio-util = { version = "0.3.1", features = ["compat"] }
