--- a/normalizer/Cargo.toml
+++ b/normalizer/Cargo.toml
@@ -18,8 +18,5 @@ bolt-proto = "0.9.1"
 tokio-util = { version = "0.3.1", features = ["compat"] }
 tokio = { version = "0.2.22", features = ["macros", "dns", "tcp"]}
 dotenv = "0.15.0"
-rincon_core = "0.1"
-rincon_connector = "0.1"
-rincon_session = "0.1"
-tokio-core = "0.1"
 anyhow = "1.0.33"
+arangors = "0.4.3"
