--- a/normalizer/Cargo.toml
+++ b/normalizer/Cargo.toml
@@ -20,3 +20,4 @@ tokio = { version = "0.2.22", features = ["macros", "dns", "tcp"]}
 dotenv = "0.15.0"
 anyhow = "1.0.33"
 arangors = "0.4.3"
+chrono = "0.4"
