--- a/schema/Cargo.toml
+++ b/schema/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "macros"
+name = "schema"
 version = "0.1.0"
 authors = ["DanielGazit <danieligazit@gmail.com>"]
 
@@ -15,3 +15,5 @@ syn = "1.0"
 serde = { version = "1", features = ["derive"] }
 
 Inflector = "0.11"
+common = { path = "../common" }
+chrono = {version = "0.4.19", features = ["serde"] }
